# chess-detector

./: .gitignore  2025-04-27-chess-tracker.md  LICENSE  README.md  dataset.py  demo_phone_app.py  diff_models.py  diff_predict.py  diff_train.py  http_api.py  image_pairs_models.py  metrics.py  models.py  phone_app.py  predict_move.py  pyproject.toml  requirements.txt  setup.cfg  test_chessboard.py  train.py
.github/workflows/: ci.yml  lint.yml
assets/chess_board/Source/: Chess Board.blend
assets/chess_board/Textures/: Chess_Board_BaseMap.xcf
dataset/: analysis.py  chess_utils.py  dataset.py  download.py  download_pgn.py  gen_dataset.py  postprocessing.py  preprocess.py  rendering.py
dataset/ChessBoard/Source/: Chess Board.blend  Chess Board.blend1
demos/: __init__.py  phone_app.py
docs/: 2025-04-27-chess-tracker.md
scripts/: README.md  calibration_demo.py
src/chess_detector/: __init__.py
src/chess_detector/api/: __init__.py  http.py
src/chess_detector/data/: __init__.py  analysis.py  chess_utils.py  dataset.py  download.py  gen_dataset.py  paths.py  postprocessing.py  rendering.py
src/chess_detector/inference/: __init__.py  predict.py
src/chess_detector/models/: __init__.py  diff.py  pair.py
src/chess_detector/training/: __init__.py  metrics.py  train_diff.py  train_pair.py
tests/: __init__.py  test_chess_utils.py  test_dataset.py  test_models.py  test_paths.py  test_postprocessing.py
